Bug 458418: onclick event doesn't fire on empty fixed position elements. r+sr=roc.